Major refactor: 1. Make most calls asynchronous 2. Broader support for pipelining 3. Implement pub-sub
Test fixes in progress.

--- a/Guanima.Redis.Tests/Guanima.Redis.Tests.csproj
+++ b/Guanima.Redis.Tests/Guanima.Redis.Tests.csproj
@@ -42,12 +42,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BaseRedisClientTest.cs" />
+    <Compile Include="RedisClientTestFixture.cs" />
     <Compile Include="HashTests.cs" />
     <Compile Include="KetamaTest.cs" />
     <Compile Include="GenericTests.cs" />
     <Compile Include="ListTests.cs" />
     <Compile Include="LockTests.cs" />
+    <Compile Include="PubSub.cs" />
     <Compile Include="StringTests.cs" />
     <Compile Include="RedisClientTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
